--- a/views/404.html
+++ b/views/404.html
@@ -16,7 +16,7 @@
             <a href="/admin/add-product">Add Product</a>
           </li>
           <li class="main-header__item">
-            <a href="/contact-us/contact">Contact Us</a>
+            <a href="/contact-us/contactus">Contact Us</a>
           </li>
         </ul>
       </nav>
