--- a/views/add-product.html
+++ b/views/add-product.html
@@ -17,7 +17,7 @@
             <a class="active" href="/admin/add-product">Add Product</a>
           </li>
           <li class="main-header__item">
-            <a href="/contact-us/contact">Contact Us</a>
+            <a href="/contact-us/contactus">Contact Us</a>
           </li>
         </ul>
       </nav>
