--- a/views/contactus.html
+++ b/views/contactus.html
@@ -17,14 +17,14 @@
             <a href="/admin/add-product">Add Product</a>
           </li>
           <li class="main-header__item">
-            <a class="active" href="/contact-us/contact">Contact Us</a>
+            <a class="active" href="/contact-us/contactus">Contact Us</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <form class="product-form" action="/contact-us/success" method="POST">
+      <form class="product-form" action="/contact-us/contactus" method="POST">
         <div class="form-control">
           <label for="title">Name</label>
           <input type="text" name="title" id="title" />
